# gulu-gui

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  backup_skill_icons.sh  config.py  main.py  ops-design-system.html  pyproject.toml
.claude/: settings.local.json
agents/: chat_agent.py  main_agent.py
api/: main.py
db/: connection.py  repository.py  schema.py
docs/: TODO.md  共鸣魔法设计文档.md  获取方式.txt
docs/wx/: 登录.md
logs/: migrate_urls_to_oss_failures_20260506_174046.csv  migrate_urls_to_oss_failures_20260506_204212.csv
oss/: oss.py
scraper/: api_client.py
scripts/: add_name_en_and_image_yise.py  alter_sys_dict_add_extra.py  create_pokemon_lineup_tables.py  create_resonance_magic_table.py  crop_miyousc_icon.py  export_skill_icons_wget.py  import_attribute_matchups.py  import_egg_groups.py  import_egg_hatch.py  import_evolution_chains.py  import_map_points.py  import_personalities.py  import_pokemon_desc.py  import_pokemon_egg.py  import_pokemon_fruit.py  import_rococ_pokemon.py  import_skill_stones.py  import_skills_traits.py  init_ops_tables.py  migrate_add_pokemon_avatar_and_source_id.py  migrate_evolution_chain_to_dag.py  migrate_lineup_member_random.py  migrate_mysql_to_pg.py  migrate_mysql_to_pg_wikiroco.py  migrate_urls_to_oss.py  rebuild_pokemon_lineup_tables_with_resonance_magic.py  seed_announcement.py  seed_announcement_like_dict.py  seed_battle_pk_random_dict.py  seed_pet_bloodline_dict.py  seed_pokemon_stat_dict.py  sync_egg_group_and_matchup_to_pg.py  sync_pokemon_image_lc_from_pets.py  sync_pokemon_skills_from_pet_jsons.py  sync_xiaoheihe_pets.py  (+3 more)
(+296 files in other folders)
