[project]
name = "lkwg-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "fastapi>=0.135.3",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.44.0",
    "deepagents>=0.4.11",
    "langchain[openai]>=1.2.12",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "load-dotenv>=0.1.0",
]
